--- a/hackerllama/2024-01-12-The Llama Hitchiking Guide to Local LLMs.qmd
+++ b/hackerllama/2024-01-12-The Llama Hitchiking Guide to Local LLMs.qmd
@@ -20,47 +20,46 @@ format:
 
 3. **Transformer:** 一种在文本任务上表现地非常优异的神经网络架构。它是绝大多数大型语言模型的基础。
 
-4. **GPT:** A type of transformer that is trained to predict the next token in a sentence. GPT-3 is an example of a GPT model...who could tell??
+4. **GPT:** 一种transformer架构的模型，被训练用于预测句子中的下一个标记。GPT-3是GPT模型的一个例子...谁知道呢
 
-    4.1 **Auto-regressive:** A type of model that generates text one token at a time. It is auto-regressive because it uses its own predictions to generate the next token. For example, the model might receive as input "Today's weather" and generate the next token, "is". It will then use "Today's weather is" as input and generate the next token, "sunny". It will then use "Today's weather is sunny" as input and generate the next token, "and". And so on.
+    4.1 **Auto-regressive:** 一种机器学习模型，逐个标记地生成文本。它是自回归的，因为它使用自己的预测来生成下一个标记。例如，模型可能以"今天的天气"为输入，生成下一个标记"是"。然后，它将"今天的天气是"作为输入，并生成下一个标记"晴朗"。它将继续使用"今天的天气是晴朗"作为输入，并生成下一个标记"和"。以此类推。
 
-5. **Token:** Models don't understand words. They understand numbers. When we receive a sequence of words, we convert them to numbers. Sometimes we split words into pieces, such as "tokenization" into "token" and "ization". This is needed because the model has a limited vocabulary. A token is the smallest unit of language that a model can understand.
 
-6. **Context length:** The number of tokens that the model can use at a time. The higher the context length, the more memory the model needs to train and the slower it is to run. E.g. Llama 2 can manage up to 4096 tokens. 
+5. **Token:** 模型不理解单词，它理解数字。当我们收到一系列单词时，我们将它们转换为数字。有时我们将单词拆分为片段，例如将"tokenization"拆分为"token"和"ization"。这是因为模型具有有限的词汇量。标记是模型能够理解的语言的最小单位。
 
-    6.1 **LLaMA:** A pre-trained model trained by Meta, shared with some groups in a private access, and then leaked. It led to an explosion of cool projects. 🦙
+6. **Context length:**  模型可以同时使用的标记数量。上下文长度越大，模型需要的内存越多，运行速度越慢。例如，Llama 2可以处理最多4096个标记。
 
-    6.2 **Llama 2:** An open-access pre-trained model released by Meta. It led to another explosion of very cool projects, and this one was not leaked! The license is not technically open-source but it's still quite open and permissive, even for commercial use cases. 🦙🦙
+    6.1 **LLaMA:** Meta训练的一个预训练模型，最开始是共享给一些私人访问的团体，然后泄露出来。它引发了许多令人兴奋的项目。 🦙
 
-    6.3 **RoPE:**  A technique that allows you to significantly expand the context lengths of a model.
+    6.2 **Llama 2:** Meta发布的一个开放访问的预训练模型。它引发了另一波非常酷的项目，而且这一次没有泄露！许可证在技术上不是开源的，但对商业用途仍然相当开放和宽容。🦙🦙
 
-    6.4 **SuperHot:** A technique that allows expanding the context length of RoPE-based models even more by doing some minimal additional training.
+    6.3 **RoPE:**  一种允许显著扩展模型上下文长度的技术
 
-7. **Pre-training:** Training a model on a very large dataset (trillion of tokens) to learn the structure of language. Imagine you have millions of dollars, as a good GPU-Rich. You usually scrape big datasets from the internet and train your model on them. This is called pre-training. The idea is to end with a model that has a strong understanding of language. This does not require labeled data! This is done before fine-tuning. Examples of pre-trained models are GPT-3, Llama 2, and Mistral.
+    6.4 **SuperHot:** 一种允许通过进行一些最小的额外训练来进一步扩展基于RoPE的模型上下文长度的技术。
 
-    7.1 **Mistral 7B:** A pre-trained model trained by Mistral. Released via torrent.
+7. **Pre-training:** 在非常大的数据集（数万亿标记）上训练模型，以学习语言的结构。通常情况下，通过从互联网上抓取大型数据集并在其上训练模型来实现。这称为预训练。这不需要标记的数据！这是在微调之前完成的。预训练模型的示例包括GPT-3、Llama 2和Mistral。
 
+    7.1 **Mistral 7B:** Mistral训练的一个预训练模型。通过种子分享
     ![](mistral.png)
 
-    7.2 **Phi 2:** A pre-trained model by Microsoft. It only has 2.7B parametrs but it's quite good for its size! It was trained with very little data (textbooks) which shows the power of high-quality data.
+    7.2 **Phi 2:** 由Microsoft训练的预训练模型。它只有2.7B参数，但对于其大小来说相当不错！它是用很少的数据（教科书）训练的，显示了高质量数据的力量。
 
-    7.3 **transformers:** a Python library to access models shared by the community. It allows you to download pre-trained models and fine-tune them for your own needs
+    7.3 **transformers:** 一个Python库，用于访问社区共享的模型。它允许您下载预训练模型并根据自己的需要进行微调。
 
-    7.4 **Base vs conversational:** a pre-trained model is not specifically trained to "behave" in a conversational manner. If you try to use a base model (e.g. GPT-3, Mistral, Llama) directly to do conversations, it won't work as well as the fine-tuned conversational variant (ChatGPT, Mistral Instruct, Llama Chat). When looking at benchmarks, you want to compare base models with base models and conversational models with conversational models.
+    7.4 **Base vs conversational:** 预训练模型并非专门训练为问答形式。如果尝试直接使用基础模型（例如GPT-3、Mistral、Llama）进行对话，其表现可能不如经过微调的对话变体（ChatGPT、Mistral Instruct、Llama Chat）好。在进行基准测试时，要将基础模型与基础模型进行比较，将对话模型与对话模型进行比较。
 
-8. **Fine-tuning:** Training a model on a small (labeled) dataset to learn a specific task. This is done after pre-training. Imagine you have a few dollars, as a good fellow GPU-Poor. Rather than training a model from scratch, you pick a pre-trained (base) model and fine-tune it. You usually pick a small dataset of few hundreds-thousands of samples. You then pass it to the model and train it on it. This is called fine-tuning. The idea is to end with a model that has a strong understanding of a specific task. For example, you can fine-tune a model with your tweets to make it generate tweets like you! (but please don't). You can fine-tune many models in your gaming laptop! Examples of fine-tuned models are ChatGPT, Vicuna, and Mistral Instruct.
+8. **Fine-tuning:** 数据集上训练模型，以学习特定任务。这是在预训练之后完成的。想象一下，你手头有一些钱，作为一个GPU较差的朋友。与其从头开始训练一个模型，不如选择一个预训练（基础）模型并对其进行微调。通常选择几百到几千个样本的小数据集。然后将其传递给模型并在其上进行训练。这称为微调。其目的是得到一个在特定任务上具有强大理解能力的模型。例如，你可以用你的推文对模型进行微调，使其生成类似于你的推文！（但请不要这样做）。微调可以在普通的游戏笔记本电脑上完成！微调模型的示例包括ChatGPT、Vicuna和Mistral Instruct。
 
-    8.1 **Mistral 7B Instruct:** A fine-tuned version of Mistral 7B.
+    8.1 **Mistral 7B Instruct:** Mistral 7B的微调版本。
 
-    8.2 **Vicuna:** A cute animal that is also a fine-tuned model. It begins from LLaMA-13B and is fine-tuned on user conversations with ChatGPT.
+    8.2 **Vicuna:** 一种可爱的动物，也是一个微调模型。它从LLaMA-13B开始，通过使用ChatGPT的用户对话数据进行微调。
 
-    8.3 **Number of parameters:** Notice the `-13B` in point 8.2. That's the number of parameters in a model. Each parameter is a number (with certain precision), and is part of the model. The parameters are learned during pre-training and fine-tuning to minimize the error.
+    8.3 **Number of parameters:** 注意8.2中的"-13B"。这是模型中的参数数量。每个参数都是模型的一部分，是一个数字（具有一定的精度），在预训练和微调中进行学习以最小化误差。
 
       ![](gpu_poor.png)
 
-9. **Prompt:** A few words that you give to the model to start generating text. For example, if you want to generate a poem, you can give the model the first line of the poem as a prompt. The model will then generate the rest of the poem!
-
-10. **Zero-shot:** A type of prompt that is used to generate text without fine-tuning. The model is not trained on any specific task. It is only trained on a large dataset of text. For example, you can give the model the first line of a poem and ask it to generate the rest of the poem. The model will do its best to generate a poem, even though it has never seen a poem before! When you use ChatGPT, you often do zero-shot generation!
+9. **Prompt:** 为了开始生成文本，你给模型提供的几个词。例如，如果你想生成一首诗，你可以将诗的第一行作为提示提供给模型。模型将然后生成诗的其余部分！
+10. **Zero-shot:** 一种在没有微调的情况下生成文本的提示类型。模型没有针对任何特定任务进行训练。它只在大量文本数据集上进行了训练。例如，你可以给模型提供一首诗的第一行，并要求它生成诗的其余部分。尽管模型以前从未见过诗歌，但它会尽力生成一首诗！在使用ChatGPT时，通常进行零-shot生成！
 
     ```
     User: Write a poem about a llama
@@ -73,7 +72,7 @@ format:
     ```
 
 
-11. **Few-shot:** A type of prompt that is used to generate text with fine-tuning. We provide a couple of examples to the model. This can improve the quality a lot!
+11. **Few-shot:**  一种用于在微调中生成文本的提示类型。我们向模型提供了一些示例。这可以显著提高生成的文本质量！
 
     ```
     User
@@ -97,161 +96,159 @@ format:
     Label: Sentence about weather.
     ```
 
-12. **Instruct-tuning:** A type of fine-tuning that uses instructions to generate text ending in more controlled behavor in generating responses or performing tasks.
+12. **Instruct-tuning:** 一种使用指令生成文本的微调类型，以实现更受控制的行为，生成响应或执行任务。
 
-    12.1 **Alpaca:** A dataset of 52,000 instructions generatd with OpenAI APIs. It kicked off a big wave of people using OpenAI to generate synthetic data for instruct-tuning. It costed about $500 to generate.
+    12.1 **Alpaca:** 由OpenAI API生成的52,000条指令的数据集。它掀起了人们使用OpenAI生成合成数据进行指导微调的浪潮。生成这个数据集的成本约为500美元。
 
-    12.2 **LIMA:**  A model that demonstrates strong performance with very few examples. It demonstrates that adding more data does not always correlate with better quality.
+    12.2 **LIMA:** 一种演示以很少的示例表现出强大性能的模型。它展示了添加更多数据并不总是与更好的质量相关联。
 
-13. **RLHF (Reinforcement Learning with Human Feedback):** A type of fine-tuning that uses reinforcement learning (RL) and human-generated feedback. Thanks to the introduction of human feedback, the end model ends up being very good for things such as conversations! It kicks off with a base model that generates bunch of conversations. Humans then rate the answers (preferences). The preferences are used to train a Reward Model that generates a score for a given text. Using Reinforcement Learning, the initial LM is trained to maximize the score generated by the Reward Model. Read more about it [here](https://huggingface.co/blog/rlhf).
+13. **RLHF (Reinforcement Learning with Human Feedback):** 一种使用强化学习（RL）和人类生成的反馈进行微调的方法。通过引入人类反馈，最终模型在对话等方面表现出色！它从一个基础模型开始生成大量对话。然后人们对答案进行评分（偏好）。这些偏好用于训练一个奖励模型，为给定文本生成一个分数。使用强化学习，初始LM被训练以最大化奖励模型生成的分数。在这里[详细了解]。(https://huggingface.co/blog/rlhf).
 
-    13.1 **RL:** Reinforcement learning is a type of machine learning that uses rewards to train a model. For example, you can train a model to play a game by giving it a reward when it wins and a punishment when it loses. The model will learn to win the game!
+    13.1 **RL:** 强化学习是一种使用奖励来训练模型的机器学习类型。例如，可以通过在赢得游戏时给予奖励，输掉游戏时给予惩罚来训练模型玩游戏。模型将学会赢得游戏！
 
-    13.2. **Reward Model:** A model that is used to generate rewards. For example, you can train a model to generate rewards for a game. The model will learn to generate rewards that are good for the game!
+    13.2. **Reward Model:** 用于生成奖励的模型。例如，可以训练一个模型为游戏生成奖励。模型将学会生成对游戏有利的奖励！
 
-    13.3 **ChatGPT:** RLHF-finetuned GPT-3 model that is very good at conversations.
+    13.3 **ChatGPT:** 经过RLHF微调的GPT-3模型，非常擅长对话。
 
-    13.4 **AIF**: An alternative to human feedback...AI Feedback!
+    13.4 **AIF**: 与人类反馈相反的一种选择...AI反馈！
 
-14. **PPO:** A type of reinforcement learning algorithm that is used to train a model. It is used in RLHF.
+14. **PPO:** 一种用于训练模型的强化学习算法,在RLHF中使用。
 
-15. **DPO:** A type of training which removes the need for a reward model. It simplifies significantly the RLHF-pipeline.
+15. **DPO:** 一种最大化奖励模型需求的算法。它大大简化了RLHF管道。
+    15.1 **Zephyr:** 一个使用DPO训练的7B Mistral-based模型。它具有类似于Llama 2 Chat模型的70B参数的能力。它还提供了一个很好的[食谱手册](https://github.com/huggingface/alignment-handbook/tree/main)。
 
-    15.1 **Zephyr:** A 7B Mistral-based model trained with DPO. It has similar capabilities to the Llama 2 Chat model of 70B parameters. It came out with a nice [handbook of recipes](https://github.com/huggingface/alignment-handbook/tree/main).
+    15.2 **Notus:** Zephyr的训练变体，但具有更好的过滤和修复数据。效果更好！
 
-    15.2 **Notus:** A trained variation of Zephyr but with better filered and fixed data. It does better!
+    15.3 **Overfitting:** 在机器学习中，当模型对训练数据学得太好，捕捉噪音和不适用于新的、未见过的数据，导致在实际任务中性能不佳时常发生
 
-    15.3 **Overfitting:** occurs in ML when a model learns the training data too well, capturing noise and specific patterns that do not generalize to new, unseen data, leading to poor performance on real-world tasks.
+    15.4 **DPO Overfits** 尽管DPO在一次行为后表现出过拟合行为，但它并不影响对话评估的下游性能。难道我们的机器学习老师在说过拟合不好的时候骗了我们吗？
 
-    15.4 **DPO Overfits** Although DPO shows overfitting behaviors after one behavior, it does not harm downstream performance on chat evaluations. Did your ML teachers lie to us when they said overfitting was bad?
+    15.5 **IPO:** 一种更简单且不容易过拟合的DPO目标变化。
 
-    15.5 **IPO:** A change in the DPO objective which is simpler and less prone to overfitting.
+    15.6. **KTO:** 相比PPO、DPO和IPO需要接受与拒绝的生成对，KTO只需要二进制标签（接受或拒绝），因此可以处理更多数据。
 
-    15.6. **KTO:** While PPO, DPO, and IPO require pairs of accepted vs rejected generations, KTO just needs a binary label (accepted or rejected), hence allowing to scale to much more data.
+    15.7 **trl:**  一个允许使用DPO、IPO、KTO等训练模型的库
 
-    15.7 **trl:** A library that allows to train models with DPO, IPO, KTO, and more!
+16. **Open LLM Leaderboard:** 一个排行榜，你可以在上面找到许多开放访问的LLM [Large Language Models leaderboard](https://huggingface.co/spaces/HuggingFaceH4/open_llm_leaderboard)的基准结果。 
 
-16. **Open LLM Leaderboard:** A [leaderboard](https://huggingface.co/spaces/HuggingFaceH4/open_llm_leaderboard) where you can find benchmark results for many open-access LLMs.
+    17.1 **Benchmark:** 运行以比较不同模型性能的测试。例如，你可以运行基准测试来比较不同模型在特定任务上的性能。
 
-    17.1 **Benchmark:** A benchmark is a test that you run to compare different models. For example, you can run a benchmark to compare the performance of different models on a specific task.
+    17.2 **TruthfulQA:** 一个不太理想的基准，用于衡量模型生成真实答案的能力。
 
-    17.2 **TruthfulQA:** A not-great benchmark to measure a model's ability to generate truthful answers.
-
-    17.3 **Conversational models:** The LLM Leaderboard should be mostly to compare base models, not as much for conversational models. It still provides some useful signal about the conversational models, but this should not be the final way to evaluate them.
+    17.3 **Conversational models:**  LLM排行榜主要用于比较基础模型，而不是对话模型。它仍然提供一些关于对话模型的有用信息，但这不应该是最终评估它们的方式。
 
     ![](benchmark.png)
 
-17. **Chatbot Arena:** A popopular [crowd-sourced open benchmark](https://lmsys.org/blog/2023-05-03-arena/) of human preferences. **It's good to compare conversational models**
+17. **Chatbot Arena:**  一个[众包开放基准](https://lmsys.org/blog/2023-05-03-arena/) ，用于收集人类偏好。用于比较对话模型。
 
     ![](chatbot_arena.png)
 
-18. **MT-Bench:** A multi-turn benchmark of 160 questions across eight domains. Each response is evaluated by GPT-4. (This presents limitations...what happens if the model is better than GPT-4?)
+18. **MT-Bench:**  一个包含八个领域的160个问题的多轮基准。每个响应都由GPT-4进行评估。（存在限制...如果模型比GPT-4更好会发生什么？）
 
-19. **Mixture-of-Experts (MoE):** A model architecture in which some of the (dense) layers are replaced with a set of experts. Each expert is a small neural network. There is a small network, router, that decides which expert to use for each token (read more [here](https://huggingface.co/blog/moe)). Clarifications:
+19. **Mixture-of-Experts (MoE):** 一种模型架构，其中一些（密集）层被一组专家替换。每个专家是一个小型神经网络。有一个小型网络，路由器，它决定为每个令牌使用哪个专家在这里(可以找到[更多信息](https://huggingface.co/blog/moe))
 
-    * A MoE is not an ensemble.
-    * If we say a MoE has 8 experts, it means each replaced dense layer is replaced with 8 experts. If there were 3 replaced layers, then there are 24 experts in total!
-    * We can activate multiple experts at the same time. For a given sentence, "hello world", "hello might be sent to experts 1 and 2 while "world" to 2 and 4.
-    * The experts in a MoE do not specialize in a task. They are all trained on the same task, they just get different tokens! Sometimes they do specialize in certain types of tokens, as shown in this table from the ST-MoE paper.
+    * MoE不是一个集成。
+    * 如果说一个MoE有8个专家，这意味着每个被替换的密集层都被8个专家替换。如果有3个被替换的层，那么总共有24个专家！
+    * 对于定的句子，“hello world”，“hello”可能被发送到专家1和2，而“world”则发送到专家2和4。
+    * MoE中的专家不专门针对某个任务。它们都在相同的任务上进行训练，只是得到不同的令牌！有时它们确实在某些类型的令牌上专业化，如ST-MoE论文中所示的表格。
 
     ![](moe.png)
 
-    19.1 **GPT-4:** A kinda good model, but we don't know what it is. The rumors say it's a MoE.
+    19.1 **GPT-4:** 一种相当不错的模型，但我们不知道它是什么。有传言说它是一个MoE。
 
-    19.2 **Mixtral:** A MoE model released by Mistral. It has 47B parameters but only 12B parameters are used at a time, making it very efficient.
+    19.2 **Mixtral:** 由Mistral发布的MoE模型，拥有470亿参数，但每次只使用120亿参数，使其非常高效。
 
-20. **Model Merging:** A technique that allows us to combine multiple models of the same architecture into a single model. Read more [here](https://huggingface.co/blog/mlabonne/merge-models).
+20. **Model Merging:** 一种允许将相同架构的多个模型合并为单个模型的技术，（在[这里](https://huggingface.co/blog/mlabonne/merge-models)可以找到更多信息）。
+   
+    20.1 **Mergekit:** 一个快速合并仓库的开源工具。
+    
+    20.2 **Averaging:** 最基本的合并技术。选择两个模型，平均它们的权重。不知何故，它似乎有点奏效！
 
-    20.1 **Mergekit:** A cool open-source tool to quickly merge repos.
+    20.3 **Frankenmerge:** 允许连接来自不同LLM的层，使你可以做一些疯狂的事情。
 
-    20.2 **Averaging:** The most basic merging technique. Pick two models, average their weights. Somehow it kinda works!
+    20.4 **Goliath-120B:** 一个Frankenmerge，将两个Llama 70B模型合并为一个120B模型。
 
-    20.3 **Frankenmerge:** It allows to concatenate layers from different LLMs, allowing you to do crazy things.
+    20.5 **MoE Merging:** （对此不太确定）mergekit中的实验性分支，允许构建类似MoE的模型，结合不同的模型。您可以指定每个专家处理哪些类型的提示，从而实现专家任务专业化。
 
-    20.4 **Goliath-120B:** A frankenmerge that combines two Llama 70B models to achieve a 120B model
-
-    20.5 **MoE Merging:** (Not 100% about this one) Experimental branch in `mergekit` that allows building a MoE-like model combining different models. You specify which models and which types of prompts you want each expert to handle, hence ending with expert task-specialization.
-
-    20.6 **Phixtral:** A MoE merge of Phi 2 DPO and Dolphin 2 Phi 2.
+    20.6 **Phixtral:**  Phi 2 DPO和Dolphin 2 Phi 2的MoE合并。
 
     ![](merge.jpeg)
 
-21. **Local LLMs:** If we have models small enough, we can run them in our computers or even our phones!
+21. **Local LLMs:**  如果模型足够小，我们可以在计算机或甚至手机上运行它们！
 
-    21.1 **TinyLlama:** A project to pre-train a 1.1B Llama model on 3 trillion tokens.
+    21.1 **TinyLlama:** 一个在3万亿令牌上预训练1.1B Llama模型的项目。
 
-    21.2 **Cognitive Computations:** A community (led by Eric Hartford) that is fine-tuning a bunch of models
+    21.2 **Cognitive Computations:**  由Eric Hartford领导的一个社区，正在微调一堆模型。
     
-    21.3 **Uncensored models:** Many models have some strong alignment that prevent doing things such as asking Llama to kill a Linux process. Training uncensored models aims to remove specific biases engrained in the decision-making process of fine-tuning a model. Read more [here](https://erichartford.com/uncensored-models).
+    21.3 **Uncensored models:** 许多模型在决策制定过程中具有某种强烈的定向，阻止了一些操作，如要求Llama终止Linux进程。训练未经审查的模型的目标是消除在模型微调决策制定过程中固有的特定偏见。
 
       ![](process.png)
 
-    21.4 **llama.cpp:** A tool to use Llama-like models in C++.
+    21.4 **llama.cpp:** 一个在C++中使用类似Llama模型的工具。
 
-    21.5 **GGUF:** A format introduced by llama.cpp to store models. It replaces the old file format, GGML.
+    21.5 **GGUF:** 由llama.cpp引入的一种存储模型的格式。它替代了旧的文件格式GGML。
 
-    21.6 **ggml:** Tensor library in ML, allowing projects such as llama.cpp and whisper.cpp (not the same as GGML, the file format).
+    21.6 **ggml:** ML中的张量库，允许项目使用llama.cpp和whisper.cpp等。
 
-    21.7 **Georgi Gerganov:** The creator of llama.cpp and ggml!
+    21.7 **Georgi Gerganov:** llama.cpp和ggml的创作者！
 
-    21.8 **Whisper:** The state-of-the-art speech-to-text open source model.
+    21.8 **Whisper:** 最先进的开源语音到文本模型。
 
-    21.9 **OpenAI:** A company that does closed source AI. (kidding, they open-sourced Whisper!)
+    21.9 **OpenAI:**  一家进行闭源AI的公司（开个玩笑，他们开源了Whisper！）。
 
-    21.10 **MLX:** A new framework for Apple devices that allows easy inference and fine-tuning of models.
+    21.10 **MLX:** 一个适用于Apple设备的新框架，允许轻松进行推断和模型微调。
 
-22. (A) **Local LLM tools:** If you don't know how to code, there are a couple of tools that can be useful
+22. (A) **Local LLM tools:**  如果您不知道如何编码，有一些工具可能会很有用。
 
-    22.1 **Oobabooga:** A simple web app that allows you to use models without coding. It's very easy to use!
+    22.1 **Oobabooga:** 一个简单的Web应用程序，允许您在无需编码的情况下使用模型。非常易于使用！
 
-    22.2 **LM Studio:** A nice advanced app that runs models on your laptop, entirely offline.
+    22.2 **LM Studio:**  一个在本地完全离线运行模型的高级应用程序。
 
-    22.3 **ollama:** An open-source tool to run LLMs locally. There are multiple web/desktop apps and terminal integrations on top of it.
+    22.3 **ollama:** 一个在其基础上提供多个Web/Desktop应用程序和终端集成的开源工具。
 
-    22.4 **ChatUI:** An open-source UI to use open-source models.
+    22.4 **ChatUI:** 一个使用开源模型的开源UI。
 
-23. **Quantization:** A technique that allows us to reduce the size of a model. It is done by reducing the precision of the model's weights. For example, we can reduce the precision from 32 bits to 8 bits. This reduces the size of the model by 4 times! The model will (sometimes) be less accurate but it will be much smaller. This allows us to run the model on smaller devices such as phones.
+23. **Quantization:** 一种通过减小模型权重的精度来减小模型大小的技术。例如，我们可以将模型的精度从32位减小到8位，从而将模型的大小减小4倍！模型可能会（有时）准确性降低，但它将更小，可以在手机等较小的设备上运行。
 
-    23.1 **TheBloke:** A bloke that quantizes models. As soon as a model is out, he quantizes it! See their [HF Profile](https://huggingface.co/TheBloke).
+    23.1 **TheBloke:**  一个量化模型的家伙。一旦有新模型发布，他就会对其进行量化！查看他的[HF个人资料](https://huggingface.co/TheBloke).
 
     ![](thebloke.png)
 
-    23.2 **Hugging Face:** A platform to find and share open-acces models, datasets, and demos. It's also a company that has built different OS libraries (and where I work!)
+    23.2 **Hugging Face:**  一个分享和查找开放访问模型、数据集和演示的平台。它还是一家构建不同OS库的公司（也是我工作的地方！）
 
-    23.3. **Facehugger:** A monster from the Alien movie. It should also be an open source tool. It's not yet.
+    23.3. **Facehugger:**  Alien电影中的一种怪物。它应该也是一个开源工具。不过目前还没有。
 
-    23.4. **GPTQ:** A popular quantization technique.
+    23.4. **GPTQ:**  一种流行的量化技术。
 
-    23.5 **AWQ:** Another popular quantization technique.
+    23.5 **AWQ:** 另一种流行的量化技术。
 
-    23.6 **EXL2:** A different quantization format used by a library called exllamav2 (among many others)
+    23.6 **EXL2:** 由名为exllamav2的库使用的一种不同的量化格式。
 
-    23.7 **LASER:** A technique that reduces the size of the model and increases its performance by reducindg the rank of specific matrices. It requires no additional training.
+    23.7 **LASER:** 一种通过减小特定矩阵的秩来减小模型大小并提高性能的技术。不需要额外的训练。
 
-24. **PEFT:** Parameter-Efficient Fine-Tuning - It's a family of methods that allow fine-tuning models without modifying all the parameters. Usually, you freeze the model, add a small set of parameters, and just modify it. It hence reduces the amount of compute required and you can achieve very good results!
+24. **PEFT:**  一系列方法，允许在不修改所有参数的情况下进行模型微调。通常，您冻结模型，添加一小组参数，然后仅修改它。这减少了计算量，并且您可以获得非常好的结果！
 
-    24.1 **peft:** A popular OS library to do PEFT! It's used in other projects such as `trl`.
+    24.1 **peft:**  用于执行PEFT的流行开源库！它被用于其他项目，如trl。
 
-    24.2 **adapters:** Another popular library to do PEFT.
+    24.2 **adapters:** 用于执行PEFT的另一个流行库。
 
-    24.3.**unsloth**: A higher-level library to do PEFT (using QLoRA)
+    24.3.**unsloth**: 使用QLoRA进行PEFT的更高级库。
 
-    24.4. **LoRA:** One of the most popular PEFT techniques. It adds low-rank "update matrices". The base model is frozen and only the update matrices are trained. This can be used for image classification, teaching Stable Diffusion the concept of your pet, or LLM fine-tuning.
+    24.4. **LoRA:** 最受欢迎的PEFT技术之一。它添加了低秩“更新矩阵”。基本模型被冻结，只训练更新矩阵。这可用于图像分类、将Stable Diffusion的概念教给您的宠物或LLM微调。
     
-25. **QLoRA:** A technique that combines LoRAs with quantization, hence we use 4-bit quantization and only update the LoRA parameters! This allows fine-tuning models with very GPU-poor GPUs.
+25. **QLoRA:** 一种将LoRA与量化相结合的技术，因此我们使用4位量化并仅更新LoRA参数！这使得可以在GPU资源较为有限的情况下对模型进行微调。
 
-    25.1. **Tim Dettmers:** A researcher that has done a lot of work on PEFT and created QLoRA.
+    25.1. **Tim Dettmers:** 一位研究人员，致力于PEFT的研究并创建了QLoRA微调方法。
 
-    25.2. **Guanaco (model):** A LLaMA fine-tune using QLoRA tuning.
+    25.2. **Guanaco (model):** 通过QLoRA微调方法得到的LLaMA微调模型
 
     ![](qlora.png)
 
-26. **axolotl:** A cute animal that is also a high-level tool to streamline fine-tuning, including support for things such as QLoRA.
+26. **axolotl:** 一种可爱的动物，也是一种简化微调过程的高级工具，包括对QLoRA等微调方法的支持。
 
-27. **Nous Research**: An open-source Discord community turned company that releases bunch of cool models.
+27. **Nous Research**: 一家由运营自己的Discord社区频道而发展起来的公司，致力于发布一系列酷炫的模型。
 
-28. **Multimodal:** A single model that can handle multiple modalities. For example, a model that can generate text and images at the same time. Or a model that can generate text and audio at the same time. Or a model that can generate text, images, and audio at the same time. Or a model that can generate text, images, audio, video, smells, tastes, feelings, thoughts, dreams, memories, consciousness, souls, universes, gods, multiverses, and omniverses at the same time. (thanks ChatGPT for your hallucination)
-
+28. **Multimodal:**  一个能够处理多种模态的单一模型。例如，一个能够同时生成文本和图像的模型。或者一个能够同时生成文本和音频的模型。又或者一个能够同时生成文本、图像和音频的模型。又或者一个能够同时生成文本、图像、音频、视频、气味、味道、感觉、思维、梦境、记忆、意识、灵魂、宇宙、神、多宇宙和全宇宙的模型。（感谢ChatGPT的幻想）
     28.1 **Hallucination:** 模型生成的回答是连贯的，但实际上并不准确，模型会将现实不存在的信息自我逻辑自洽，导致虚假信息或想象中的情境的产生，就像上面的例子一样！
 
     28.2 **LlaVA:** 一个多模态模型，能够接收图像和文本作为输入，并生成文本响应。
@@ -268,9 +265,9 @@ format:
 
     ![](bigcode.jpeg)
 
-    30.4 **The Stack:** 一个包含6.4TB合法许可的代码数据集，涵盖了358种编程语言。
+    30.4 **The Stack:** 一个包含6.4TB数据量的合法许可的代码数据集，涵盖了358种编程语言。
 
-    30.5 **Code Llama:** 最佳的基础代码模型。它基于 Llama 2微调。
+    30.5 **Code Llama:** 最佳的基础代码模型。它基于Llama2微调。
 
     ![](codellama.jpeg)
 
